Refaktorerer fra Periode til DatoIntervallEntitet